--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -2,6 +2,10 @@
   display: none !important;
 }
 
+.no-scroll {
+  overflow: hidden;
+}
+
 .main-wrapper {
   min-height: 100vh;
   padding: 50px 5%;
