--- a/sass/sections/_typography.scss
+++ b/sass/sections/_typography.scss
@@ -6,8 +6,6 @@
     gap: 2vmin;
     padding-top: 15px;
 
-    .font-item {}
-
     .view-code {
       display: none;
       position: relative;
